--- a/_output.yml
+++ b/_output.yml
@@ -7,3 +7,6 @@ bookdown::gitbook:
         <img src="./img/iaaicon.png" alt="IAA"  class="center"</li>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
+    sharing:
+      github: yes
+      facebook: no
